add example of how to use binder rollup

--- a/reactjs/first/expense-manager-rollup/public/index.html
+++ b/reactjs/first/expense-manager-rollup/public/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="utf-8">
+    <title>Expense Manager :: Rollup version</title>
 </head>
 <body>
-$END$
+<div id="root"></div>
+<script type="module" src="./index.js"></script>
 </body>
 </html>
