--- a/reactjs/first/static_site/hello.html
+++ b/reactjs/first/static_site/hello.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+  <meta charset="UTF-8" />
+  <title>Simple React app</title>
 </head>
 <body>
-$END$
+    <div id="react-app"></div>
+    <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+    <script language="JavaScript">
+        element = React.createElement('h1', {}, 'Simple React app')
+        ReactDOM.render(element, document.getElementById('react-app'));
+    </script>
 </body>
 </html>
