--- a/reactjs/first/expense-manager/public/index.html
+++ b/reactjs/first/expense-manager/public/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>Expense Manager :: Parcel version</title>
+  <meta charset="utf-8">
+  <title>Expense Manager</title>
 </head>
 <body>
 <div id="root"></div>
-<script type="text/JavaScript" src="../src/index.js"></script>
 </body>
 </html>
