--- a/reactjs/first/expense-manager-1/public/index.html
+++ b/reactjs/first/expense-manager-1/public/index.html
@@ -6,5 +6,13 @@
 </head>
 <body>
 <div id="root"></div>
+<p>
+<div id="item"></div>
+<p>
+<div id="fun_item"></div>
+<p>
+<div id="itemList"></div>
+<p>
+<div id="event"></div>
 </body>
 </html>
