--- a/reactjs/first/expense-manager-1/public/index.html
+++ b/reactjs/first/expense-manager-1/public/index.html
@@ -14,5 +14,12 @@
 <div id="itemList"></div>
 <p>
 <div id="event"></div>
+<p>
+<div id="ItemListFn"></div>
+<p>
+<div id="Containment"></div>
+
+<p>
+<div id="itemListPage"></div>
 </body>
 </html>
