--- a/css+div/demo/day1.html
+++ b/css+div/demo/day1.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta charset="utf-8">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>无标题文档</title>
+<style type="text/css">
+body { margin: 0px; }
+#header { height: 80px; width: 500px; margin: 10px auto; background: #F93; }
+#main { margin: 30px auto; width: 500px; height: 400px; background: #9FF; }
+#footer { margin: 10px auto; width: 500px; height: 80px; background: #9f9; }
+</style>
 </head>
 
 <body>
+<div id="header">此处显示  id "header" 的内容</div>
+<div id="main">此处显示  id "main" 的内容</div>
+<div id="footer">此处显示  id "footer" 的内容</div>
 </body>
 </html>
