--- a/css+div/dummy-youtube/index.html
+++ b/css+div/dummy-youtube/index.html
@@ -7,17 +7,6 @@
 <body>
     <div id="header">
         <div id="subheader">
-
-            <div id="burger">
-               <div>
-                    <div id="spans">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </div>
-                </div>
-                <a href="#"><img src="./imgs/logo.png" height="50"></a>           
-            </div>
             <div id="search">
                 <div class="input">
                     <input name="keyword" type="text"  placeholder="Search" maxlength="200">
@@ -64,53 +53,67 @@
             <span>New to you</span>
         </div>  
     </div>
-    <div id="menu">
-        <ul class="pri">
-            <li class="cur"><img src="./imgs/home-fill.svg" width="35"><a href="">Home</a></li>
-            <li><img src="./imgs/shorts.svg" width="35"><a href="">Short</a></li>
-            <li><img src="./imgs/reg.svg" width="35"><a href="">Subscriptions</a></li>
-        </ul>
-        <div class="line"></div>
-        <ul class="pri">
-            <li><img src="./imgs/library-books.svg" width="35"><a href="">Library</a></li>
-            <li><img src="./imgs/his.svg" width="35"><a href="">History</a></li>
-            <li><img src="./imgs/video.svg" width="35"><a href="">Your video</a></li>
-            <li><img src="./imgs/watch.svg" width="35"><a href="">Watch later</a></li>
-            <li class="toHide hide"><img src="./imgs/bookmarker.svg" width="35"><a href="">FullStack Dev</a></li>
-            <li class="toHide hide"><img src="./imgs/bookmarker.svg" width="35"><a href="">Web3.0 Dev</a></li>
-            <li class="toHide hide"><img src="./imgs/bookmarker.svg" width="35"><a href="">Ethereum</a></li>
-            <li id="more" class=""><img src="./imgs/more.svg" width="35"><a href="">Show more</a></li>
-            <li id="less" class="hide"><img src="./imgs/less.svg" width="35"><a href="">Show less</a></li>
-        </ul>
-        <div class="line"></div>
-        <span>Subscriptions</span>
-        <ul class="subs">
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-        </ul>
+    <div id="left">
+        <div id="burger">
+            <div>
+                 <div id="spans">
+                     <span></span>
+                     <span></span>
+                     <span></span>
+                 </div>
+             </div>
+             <a href="#"><img src="./imgs/logo.png" height="50"></a>           
+         </div>
+        <div id="menu">
+            <ul class="pri">
+                <li class="cur"><img src="./imgs/home-fill.svg" width="35"><a href="">Home</a></li>
+                <li><img src="./imgs/shorts.svg" width="35"><a href="">Short</a></li>
+                <li><img src="./imgs/reg.svg" width="35"><a href="">Subscriptions</a></li>
+            </ul>
+            <div class="line"></div>
+            <ul class="pri">
+                <li><img src="./imgs/library-books.svg" width="35"><a href="">Library</a></li>
+                <li><img src="./imgs/his.svg" width="35"><a href="">History</a></li>
+                <li><img src="./imgs/video.svg" width="35"><a href="">Your video</a></li>
+                <li><img src="./imgs/watch.svg" width="35"><a href="">Watch later</a></li>
+                <li class="toHide hide"><img src="./imgs/bookmarker.svg" width="35"><a href="">FullStack Dev</a></li>
+                <li class="toHide hide"><img src="./imgs/bookmarker.svg" width="35"><a href="">Web3.0 Dev</a></li>
+                <li class="toHide hide"><img src="./imgs/bookmarker.svg" width="35"><a href="">Ethereum</a></li>
+                <li id="more" class=""><img src="./imgs/more.svg" width="35"><a href="">Show more</a></li>
+                <li id="less" class="hide"><img src="./imgs/less.svg" width="35"><a href="">Show less</a></li>
+            </ul>
+            <div class="line"></div>
+            <span>Subscriptions</span>
+            <ul class="subs">
+                <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
+                <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
+                <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
+                <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
+                <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
+                <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
+                <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
+                <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
+                <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
+                <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
+                <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
+                <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
+                <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
+                <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
+                <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
+                <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
+                <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
+                <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
+                <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
+                <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
+                <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
+                <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
+                <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
+                <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
+            </ul>
+            <div>ddd</div>
+        </div>
     </div>
+    <div id="right"></div>
     <main>
         <section>
             <div class="primary">
