--- a/css+div/dummy-youtube/index.html
+++ b/css+div/dummy-youtube/index.html
@@ -39,18 +39,6 @@
                 </div>
                 <div class="prof"><img src="./imgs/prof.png" width="40"></div>
             </div>
-        </div>
-        <div id="tabs">
-            <span class="cur">All</span>
-            <span>Study Skills</span>
-            <span>Thought</span>
-            <span>Computer Science</span>
-            <span>Pronunciation</span>
-            <span>Sales</span>
-            <span>Java</span>
-            <span>Recent uploaded</span>
-            <span>Watched</span>
-            <span>New to you</span>
         </div>  
     </div>
     <div id="left">
@@ -113,52 +101,66 @@
             <div>ddd</div>
         </div>
     </div>
-    <div id="right"></div>
-    <main>
-        <section>
-            <div class="primary">
-                <div class="vedio"></div>
-                <div class="vedio"></div>
-                <div class="vedio"></div>
-                <div class="vedio"></div>
-                <div class="vedio"></div>
-                <div class="vedio"></div>
+    <div id="right">  
+        <main>
+            <div id="tabs">
+                <span class="cur">All</span>
+                <span>Study Skills</span>
+                <span>Thought</span>
+                <span>Computer Science</span>
+                <span>Pronunciation</span>
+                <span>Sales</span>
+                <span>Java</span>
+                <span>Recent uploaded</span>
+                <span>Watched</span>
+                <span>New to you</span>
             </div>
-            <div class="line"></div>
-        </section>
-        <section>
-            <div id="s_title">
-                <div id="s_title_name">
-                    <div><img src="./imgs/short.png"> Shorts</div>
+            <section>
+                <div class="primary">
+                    <div class="vedio"></div>
+                    <div class="vedio"></div>
+                    <div class="vedio"></div>
+                    <div class="vedio"></div>
+                    <div class="vedio"></div>
+                    <div class="vedio"></div>
                 </div>
-                <div id="hint_and_close">
-                    <div class="hint">Not interested</div>
-                    <div class="close">
-                        <span></span>
-                        <span></span>
+                <div class="line"></div>
+            </section>
+            <section>
+                <div id="s_title">
+                    <div id="s_title_name">
+                        <div><img src="./imgs/short.png"> Shorts</div>
+                    </div>
+                    <div id="hint_and_close">
+                        <div class="hint">Not interested</div>
+                        <div class="close">
+                            <span></span>
+                            <span></span>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="short">
-                <div class="vedio"></div>
-                <div class="vedio"></div>
-                <div class="vedio"></div>
-                <div class="vedio"></div>
-            </div>
-            <div class="s_more"></div>
-            <div class="line"></div>
-        </section>
-        <section>
-            <div class="primary">
-                <div class="vedio"></div>
-                <div class="vedio"></div>
-                <div class="vedio"></div>
-                <div class="vedio"></div>
-                <div class="vedio"></div>
-                <div class="vedio"></div>
-            </div>
-        </section>
-    </main>
+                <div class="short">
+                    <div class="vedio"></div>
+                    <div class="vedio"></div>
+                    <div class="vedio"></div>
+                    <div class="vedio"></div>
+                </div>
+                <div class="s_more"></div>
+                <div class="line"></div>
+            </section>
+            <section>
+                <div class="primary">
+                    <div class="vedio"></div>
+                    <div class="vedio"></div>
+                    <div class="vedio"></div>
+                    <div class="vedio"></div>
+                    <div class="vedio"></div>
+                    <div class="vedio"></div>
+                </div>
+            </section>
+        </main>
+    </div>
+    
     <script src="./js/index.js"></script>
     
 </body>
