add min-menu on the left side bar

--- a/css+div/dummy-youtube/index.html
+++ b/css+div/dummy-youtube/index.html
@@ -63,7 +63,7 @@
             <span>New to you</span>
         </div> 
     </div>
-    <div id="menu">
+    <div id="menu" class="active">
         <ul class="pri">
             <li class="cur"><img src="./imgs/home-fill.svg" width="35"><a href="">Home</a></li>
             <li><img src="./imgs/shorts.svg" width="35"><a href="">Short</a></li>
@@ -111,10 +111,24 @@
         </ul>
         <div>ddd</div>
     </div>
+    <div id="min-menu"> 
+        <ul>
+            <li><a href="#"><img src="./imgs/home-fill.svg">Home</a></li>
+            <li><a href="#"><img src="./imgs/shorts.svg">Shorts</a></li>
+            <li><a href="#"><img src="./imgs/reg.svg">Subscriptions</a></li>
+            <li><a href="#"><img src="./imgs/library-books.svg">Library</a></li>
+        </ul>
+    </div>
+        
     <main>    
         <section>
             <div class="primary">
-                <div class="vedio"></div>
+                <div class="vedio">
+                    <div class="overview"></div>
+                    <div class="intro">
+                        
+                    </div>
+                </div>
                 <div class="vedio"></div>
                 <div class="vedio"></div>
                 <div class="vedio"></div>
