1.add notification flag 2. fix the bug for menu scroll

--- a/css+div/dummy-youtube/index.html
+++ b/css+div/dummy-youtube/index.html
@@ -45,8 +45,10 @@
             <div class="video-plus"><img src="./imgs/video-plus.svg"  width="30">
                 <span>Create</span>
             </div>
-            <div class="togzhi"><img src="./imgs/togzhi.svg"  width="30">
+            <div class="togzhi">
+                <img src="./imgs/togzhi.svg"  width="30">
                 <span>Notifications</span>
+                <span>7</span>
             </div>
             <div class="prof"><img src="./imgs/prof.png" width="40"></div>
         </div> 
@@ -55,7 +57,7 @@
     <div id="menu" class="active">
         <ul class="pri">
             <li class="cur"><img src="./imgs/home-fill.svg" width="35"><a href="">Home</a></li>
-            <li><img src="./imgs/shorts.svg" width="35"><a href="">Short</a></li>
+            <li><img src="./imgs/shorts.svg" width="35"><a href="">Shorts</a></li>
             <li><img src="./imgs/reg.svg" width="35"><a href="">Subscriptions</a></li>
         </ul>
         <div class="line"></div>
@@ -73,30 +75,30 @@
         <div class="line"></div>
         <span>Subscriptions</span>
         <ul class="subs">
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
-            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a></li>
+            <li class="new"><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li class="new"><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li ><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
         </ul>
         <div>ddd</div>
     </div>
@@ -128,7 +130,15 @@
                 <li><a><img src="./imgs/popups/uniE9D0.svg">Don't recommend channel</a></li>
                 <li><a><img src="./imgs/popups/report.svg">Report</a></li>
             </ul>
-        </div>    
+        </div>
+        <div id="short_popup">
+            <ul>
+                <li><a><img src="./imgs/popups/report.svg">Report</a></li>
+                <li><a><img src="./imgs/popups/share.svg">Share</a></li>
+                <li><a><img src="./imgs/popups/no-recomd.svg">Not interested</a></li>
+                <li><a><img src="./imgs/popups/uniE9D0.svg">Don't recommend channel</a></li>    
+            </ul>
+        </div>     
         <section>
             <div class="primary">
                 <div class="video">
@@ -273,10 +283,62 @@
                 </div>
             </div>
             <div class="short">
-                <div class="video"></div>
-                <div class="video"></div>
-                <div class="video"></div>
-                <div class="video"></div>
+                <div class="video">
+                    <div class="overview">
+                        <a href="#">
+                            <video controls muted onmouseover="this.play()" onmouseout="this.pause()">
+                                <source src="./videos/20221102-213005.mp4" type="video/mp4"></source>
+                            </video>
+                        </a>
+                    </div>
+                    <div class="intro"> 
+                        <span>The Power of Saying Less </span>
+                        <span>4.8M views</span>
+                        <span class="short_actions"><img src="./imgs/more_android_light.svg"></span>
+                    </div>
+                </div>
+                <div class="video">
+                    <div class="overview">
+                        <a href="#">
+                            <video controls muted onmouseover="this.play()" onmouseout="this.pause()">
+                                <source src="./videos/20221102-213005.mp4" type="video/mp4"></source>
+                            </video>
+                        </a>
+                    </div>
+                    <div class="intro"> 
+                        <span>The Power of Saying Less </span>
+                        <span>4.8M views</span>
+                        <span class="short_actions"><img src="./imgs/more_android_light.svg"></span>
+                    </div>
+                </div>
+                <div class="video">
+                    <div class="overview">
+                        <a href="#">
+                            <video controls muted onmouseover="this.play()" onmouseout="this.pause()">
+                                <source src="./videos/20221102-213005.mp4" type="video/mp4"></source>
+                            </video>
+                        </a>
+                    </div>
+                    <div class="intro"> 
+                        <span>The Power of Saying Less </span>
+                        <span>4.8M views</span>
+                        <span class="short_actions"><img src="./imgs/more_android_light.svg"></span>
+                    </div>
+                </div>
+                <div class="video">
+                    <div class="overview">
+                        <a href="#">
+                            <video controls muted onmouseover="this.play()" onmouseout="this.pause()">
+                                <source src="./videos/20221102-213005.mp4" type="video/mp4"></source>
+                            </video>
+                        </a>
+                    </div>
+                    <div class="intro"> 
+                        <span>The Power of Saying Less </span>
+                        <span>4.8M views</span>
+                        <span class="short_actions"><img src="./imgs/more_android_light.svg"></span>
+                    </div>
+                </div>
             </div>
             <div class="s_more"></div>
             <div class="line"></div>
