fix bugs and add detail page

--- a/css+div/dummy-youtube/index.html
+++ b/css+div/dummy-youtube/index.html
@@ -14,7 +14,7 @@
                      <span></span>
                  </div>
              </div>
-             <a href="#"><img src="./imgs/logo1.png" height="50"></a>           
+             <a href="index.html"><img src="./imgs/logo1.png" height="50"></a>           
          </div>
     </div>
     <div id="header">
@@ -56,7 +56,7 @@
     </div>
     <div id="menu" class="active">
         <ul class="pri">
-            <li class="cur"><img src="./imgs/home-fill.svg" width="35"><a href="">Home</a></li>
+            <li><img src="./imgs/home-fill.svg" width="35"><a href="">Home</a></li>
             <li><img src="./imgs/shorts.svg" width="35"><a href="">Shorts</a></li>
             <li><img src="./imgs/reg.svg" width="35"><a href="">Subscriptions</a></li>
         </ul>
