--- a/css+div/dummy-youtube/details.html
+++ b/css+div/dummy-youtube/details.html
@@ -5,4 +5,103 @@
   <title>Details in Dummy YouTube</title>
 </head>
 <body>
+  <div id="logo">
+    <div id="burger">
+        <div>
+             <div id="spans">
+                 <span></span>
+                 <span></span>
+                 <span></span>
+             </div>
+         </div>
+         <a href="index.html"><img src="./imgs/logo1.png" height="50"></a>           
+    </div>
+  </div>
+  <div id="header"> <!-- exactly the same as the header in index.html-->
+    <div id="search">
+      <div class="input">
+          <input name="keyword" type="text"  placeholder="Search" maxlength="200">
+          <img src="./imgs/len.svg" width="25">
+          <div id="historywords">
+              <ul>
+                  <li><img src="./imgs/his.svg" width="30"><span>Javascript algorithm</span><span>Remove</span></li>
+                  <li><img src="./imgs/his.svg" width="30"><span>tailwind css tutorial</span><span>Remove</span></li>
+                  <li><img src="./imgs/his.svg" width="30"><span>defi dapp</span><span>Remove</span></li>
+                  <li><img src="./imgs/his.svg" width="30"><span>React js tips and tricks</span><span>Remove</span></li>
+                  <li><img src="./imgs/his.svg" width="30"><span>ps for beginner</span><span>Remove</span></li>
+              </ul>
+          </div>
+      </div>
+      <div class="len">
+          <img src="./imgs/len.svg" width="25">
+          <span>Search</span>
+      </div>
+      <div class="voice">
+          <img src="./imgs/speaker.svg" width="25">
+          <span>Search with your voice</span>
+      </div>
+    </div>
+    <div id="me">
+      <div class="video-plus"><img src="./imgs/video-plus.svg"  width="30">
+          <span>Create</span>
+      </div>
+      <div class="togzhi">
+          <img src="./imgs/togzhi.svg"  width="30">
+          <span>Notifications</span>
+          <span>7</span>
+      </div>
+      <div class="prof"><img src="./imgs/prof.png" width="40"></div>
+    </div>
+  </div>
+  <div id="menu" class="active">
+    <ul class="pri">
+        <li><img src="./imgs/home-fill.svg" width="35"><a href="">Home</a></li>
+        <li><img src="./imgs/shorts.svg" width="35"><a href="">Shorts</a></li>
+        <li><img src="./imgs/reg.svg" width="35"><a href="">Subscriptions</a></li>
+    </ul>
+    <div class="line"></div>
+    <ul class="pri">
+        <li><img src="./imgs/library-books.svg" width="35"><a href="">Library</a></li>
+        <li><img src="./imgs/his.svg" width="35"><a href="">History</a></li>
+        <li><img src="./imgs/video.svg" width="35"><a href="">Your video</a></li>
+        <li><img src="./imgs/watch.svg" width="35"><a href="">Watch later</a></li>
+        <li class="toHide hide"><img src="./imgs/bookmarker.svg" width="35"><a href="">FullStack Dev</a></li>
+        <li class="toHide hide"><img src="./imgs/bookmarker.svg" width="35"><a href="">Web3.0 Dev</a></li>
+        <li class="toHide hide"><img src="./imgs/bookmarker.svg" width="35"><a href="">Ethereum</a></li>
+        <li id="more" class=""><img src="./imgs/more.svg" width="35"><a href="">Show more</a></li>
+        <li id="less" class="hide"><img src="./imgs/less.svg" width="35"><a href="">Show less</a></li>
+    </ul>
+    <div class="line"></div>
+    <span>Subscriptions</span>
+    <ul class="subs">
+        <li class="new"><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+        <li class="new"><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+        <li ><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+    </ul>
+    <div>ddd</div>
+  </div>
+  <div id="content"></div>
+  <div id="mask"></div>
+  <script src="./js/details.js"></script>
 </body>
