refactor js codes

--- a/css+div/dummy-youtube/details.html
+++ b/css+div/dummy-youtube/details.html
@@ -103,5 +103,5 @@
   </div>
   <div id="content"></div>
   <div id="mask"></div>
-  <script src="./js/details.js"></script>
+  <script type=module src="./js/details.js"></script>
 </body>
