--- a/css+div/dummy-youtube/index.html
+++ b/css+div/dummy-youtube/index.html
@@ -475,6 +475,6 @@
         </section>
     </main>
     
-    <script src="./js/index.js"></script>
+    <script type=module src="./js/index.js"></script>
     
 </body>
