--- a/css+div/dummy-youtube/details.html
+++ b/css+div/dummy-youtube/details.html
@@ -5,19 +5,19 @@
   <title>Details in Dummy YouTube</title>
 </head>
 <body>
-  <div id="logo">
-    <div id="burger">
-        <div>
-             <div id="spans">
-                 <span></span>
-                 <span></span>
-                 <span></span>
-             </div>
-         </div>
-         <a href="index.html"><img src="./imgs/logo1.png" height="50"></a>           
+  <div id="header">
+    <div class="logo">
+      <div class="burger">
+          <div>
+               <div id="spans">
+                   <span></span>
+                   <span></span>
+                   <span></span>
+               </div>
+           </div>
+           <a href="index.html"><img src="./imgs/logo1.png" height="50"></a>           
+       </div>
     </div>
-  </div>
-  <div id="header"> <!-- exactly the same as the header in index.html-->
     <div id="search">
       <div class="input">
           <input name="keyword" type="text"  placeholder="Search" maxlength="200">
@@ -54,54 +54,82 @@
     </div>
   </div>
   <div id="menu" class="active">
-    <ul class="pri">
-        <li><img src="./imgs/home-fill.svg" width="35"><a href="">Home</a></li>
-        <li><img src="./imgs/shorts.svg" width="35"><a href="">Shorts</a></li>
-        <li><img src="./imgs/reg.svg" width="35"><a href="">Subscriptions</a></li>
+    <div class="logo">
+        <div class="burger">
+            <div>
+                 <div id="spans">
+                     <span></span>
+                     <span></span>
+                     <span></span>
+                 </div>
+            </div>
+            <a href="index.html"><img src="./imgs/logo1.png" height="50"></a>           
+        </div>
+    </div>
+    <div id="menutails">
+        <ul class="pri">
+            <li><img src="./imgs/home-fill.svg" width="35"><a href="">Home</a></li>
+            <li><img src="./imgs/shorts.svg" width="35"><a href="">Shorts</a></li>
+            <li><img src="./imgs/reg.svg" width="35"><a href="">Subscriptions</a></li>
+        </ul>
+        <div class="line"></div>
+        <ul class="pri">
+            <li><img src="./imgs/library-books.svg" width="35"><a href="">Library</a></li>
+            <li><img src="./imgs/his.svg" width="35"><a href="">History</a></li>
+            <li><img src="./imgs/video.svg" width="35"><a href="">Your video</a></li>
+            <li><img src="./imgs/watch.svg" width="35"><a href="">Watch later</a></li>
+            <li class="toHide hide"><img src="./imgs/bookmarker.svg" width="35"><a href="">FullStack Dev</a></li>
+            <li class="toHide hide"><img src="./imgs/bookmarker.svg" width="35"><a href="">Web3.0 Dev</a></li>
+            <li class="toHide hide"><img src="./imgs/bookmarker.svg" width="35"><a href="">Ethereum</a></li>
+            <li id="more" class=""><img src="./imgs/more.svg" width="35"><a href="">Show more</a></li>
+            <li id="less" class="hide"><img src="./imgs/less.svg" width="35"><a href="">Show less</a></li>
+        </ul>
+        <div class="line"></div>
+        <span>Subscriptions</span>
+        <ul class="subs">
+            <li class="new"><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li class="new"><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li ><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+            <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
+        </ul>
+        <div>ddd</div>
+    </div>
+</div>
+<div id="min-menu"> 
+    <ul>
+        <li><a href="#"><img src="./imgs/home-fill.svg">Home</a></li>
+        <li><a href="#"><img src="./imgs/shorts.svg">Shorts</a></li>
+        <li><a href="#"><img src="./imgs/reg.svg">Subscriptions</a></li>
+        <li><a href="#"><img src="./imgs/library-books.svg">Library</a></li>
     </ul>
-    <div class="line"></div>
-    <ul class="pri">
-        <li><img src="./imgs/library-books.svg" width="35"><a href="">Library</a></li>
-        <li><img src="./imgs/his.svg" width="35"><a href="">History</a></li>
-        <li><img src="./imgs/video.svg" width="35"><a href="">Your video</a></li>
-        <li><img src="./imgs/watch.svg" width="35"><a href="">Watch later</a></li>
-        <li class="toHide hide"><img src="./imgs/bookmarker.svg" width="35"><a href="">FullStack Dev</a></li>
-        <li class="toHide hide"><img src="./imgs/bookmarker.svg" width="35"><a href="">Web3.0 Dev</a></li>
-        <li class="toHide hide"><img src="./imgs/bookmarker.svg" width="35"><a href="">Ethereum</a></li>
-        <li id="more" class=""><img src="./imgs/more.svg" width="35"><a href="">Show more</a></li>
-        <li id="less" class="hide"><img src="./imgs/less.svg" width="35"><a href="">Show less</a></li>
-    </ul>
-    <div class="line"></div>
-    <span>Subscriptions</span>
-    <ul class="subs">
-        <li class="new"><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
-        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
-        <li class="new"><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
-        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
-        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
-        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
-        <li ><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
-        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
-        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
-        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
-        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
-        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
-        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
-        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
-        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
-        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
-        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
-        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
-        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
-        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
-        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
-        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
-        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
-        <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
-    </ul>
-    <div>ddd</div>
-  </div>
-  <div id="content"></div>
-  <div id="mask"></div>
-  <script type=module src="./js/details.js"></script>
+</div>
+<div id="content">
+    <div id="videos">
+      <div id="major"></div>
+      <div id="reds"></div>
+    </div>
+    <div id="comments"></div>
+</div>
+<div id="mask"></div>
+<script type=module src="./js/details.js"></script>
 </body>
