the layout of detail page

--- a/css+div/dummy-youtube/details.html
+++ b/css+div/dummy-youtube/details.html
@@ -125,10 +125,18 @@
 </div>
 <div id="content">
     <div id="videos">
-      <div id="major"></div>
+      <div id="major">
+        <div id="video"></div>
+        <div id="c1" class="comments">
+          comments1
+        </div>
+      </div>
       <div id="reds"></div>
+      <div id="c2" class="comments">
+        comments2
+      </div>
     </div>
-    <div id="comments"></div>
+    
 </div>
 <div id="mask"></div>
 <script type=module src="./js/details.js"></script>
