update detail page

--- a/css+div/dummy-youtube/details.html
+++ b/css+div/dummy-youtube/details.html
@@ -126,7 +126,68 @@
 <div id="content">
     <div id="videos">
       <div id="major">
-        <div id="video"></div>
+        <div id="video">
+            <video controls autoplay>
+                <source src="./videos/20230529-210928.mp4" type="video/mp4"></source>
+                Your browser does not support the video tag.
+            </video>
+            <div id="intro">
+                <span>Without a Goal, you can't Score | from Ireland, the Ring of Kerry</span>
+                <div id="actions">
+                    <span id="subaddedMesg">Subscription added</span>
+                    <div id="subme">
+                        <div id="who">
+                            <a href="#"><img src="./imgs/prof.png"></a>
+                            <span>Janessa Tech</span>
+                            <span>301M subscribers</span>
+                        </div>
+                        <div id="sub">Subscribe</div>
+                        <div id="subed">Subscribed
+                            <img src="./imgs/togzhi.svg">
+                            <img src="./imgs/more.svg">
+                            <div id="subedPopup">
+                                <ul>
+                                    <li><span>All</span><img src="./imgs/tongzhi-fill.svg"></li>
+                                    <li><span>Personalized</span><img src="./imgs/togzhi.svg"></li>
+                                    <li><span>None</span><img src="./imgs/tongzhi-no.svg"></li>
+                                    <li><span>Unsubscribe</span><img src="./imgs/unreg.svg"></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="others">
+                        <div id="like_dislike">
+                            <div id="like">
+                                <div id="cnt"></div>
+                                <img>
+                                <span>I like this</span>
+                            </div>
+                            <div id="dislike">
+                                <img>
+                                <span>I dislike this</span>
+                            </div>
+                        </div>
+                        <div id="share">
+                            <span>Share</span>
+                        </div>
+                        <div id="clip">
+                            <img>
+                            <span>Clip</span>
+                        </div>
+                        <div id="save">
+                            <img>
+                            <span></span>
+                        </div>
+                        <div id="more"></div>
+                    </div>                      
+                </div>
+                <div id="summary">
+                    <span></span>
+                    <div id="showMore">more</div>
+                    <div id="showLess">Show Less</div>
+                </div>
+            </div>
+        </div>
         <div id="c1" class="comments">
           comments1
         </div>
