refactor code for the layout of detail page

--- a/css+div/dummy-youtube/details.html
+++ b/css+div/dummy-youtube/details.html
@@ -141,7 +141,7 @@
                             <span>Janessa Tech</span>
                             <span>301M subscribers</span>
                         </div>
-                        <div id="sub">Subscribe</div>
+                        <div id="sub" class="open">Subscribe</div>
                         <div id="subed">Subscribed
                             <img src="./imgs/togzhi.svg">
                             <img src="./imgs/more.svg">
