continue detail page, update styles for #actions

--- a/css+div/dummy-youtube/details.html
+++ b/css+div/dummy-youtube/details.html
@@ -158,12 +158,12 @@
                     <div id="others">
                         <div id="like_dislike">
                             <div id="like">
-                                <div id="cnt"></div>
-                                <img>
+                                <div id="cnt">107</div>
+                                <img src="./imgs/support.svg">
                                 <span>I like this</span>
                             </div>
                             <div id="dislike">
-                                <img>
+                                <img src="./imgs/support-no.svg">
                                 <span>I dislike this</span>
                             </div>
                         </div>
